---
source: src/flake8_simplify/mod.rs
expression: checks
---
- kind:
    IfExprWithTrueFalse: b
  location:
    row: 1
    column: 4
  end_location:
    row: 1
    column: 24
  fix:
    content: bool(b)
    location:
      row: 1
      column: 4
    end_location:
      row: 1
      column: 24
  parent: ~
- kind:
    IfExprWithTrueFalse: b != c
  location:
    row: 3
    column: 4
  end_location:
    row: 3
    column: 29
  fix:
    content: bool(b != c)
    location:
      row: 3
      column: 4
    end_location:
      row: 3
      column: 29
  parent: ~
- kind:
    IfExprWithTrueFalse: b + c
  location:
    row: 5
    column: 4
  end_location:
    row: 5
    column: 28
  fix:
    content: bool(b + c)
    location:
      row: 5
      column: 4
    end_location:
      row: 5
      column: 28
  parent: ~

